--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pinkweb/phpstan-prefer-interfaces-rule",
+    "name": "pinkwebapp/phpstan-prefer-interfaces-rule",
     "description": "Custom rules for phpstan to prefer interfaces over concrete classes as constructor arguments.",
     "type": "library",
     "license": "MIT",
@@ -21,10 +21,16 @@
         }
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.2",
         "phpstan/phpstan": "^2"
     },
     "require-dev": {
-      "phpunit/phpunit": "^12.0"
+      "phpunit/phpunit": "^11.0",
+      "friendsofphp/php-cs-fixer": "^3.64"
+    },
+    "config": {
+      "platform": {
+        "php": "8.2.0"
+      }
     }
 }
